--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,6 +63,7 @@
         {{ content }}
     </main>
 
+    <script src="https://code4good.cn/qq.js"></script>
 
     <!-- Scripts: popper, bootstrap, theme, lunr -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
@@ -78,8 +79,7 @@
         <div class="row align-items-center justify-content-between">
             <div>
                 <span class="navbar-brand mr-2 mb-0"><strong>Code4Good</strong></span>
-                <span>Copyright © <script>document.write(new Date().getFullYear())</script>.</span>
-
+            
             </div>
             <div>
                 Proudly using <a target="_blank" class="text-dark" href="https://www.wowthemes.net/mundana-jekyll-theme/"> Mundana Jekyll Theme.
