--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,8 @@
 
     {% include tracking-header.html %}
 
+    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2::53" alt="欢迎咨询" title="欢迎咨询"/></a>
+
 
 </head>
 
