test adding echat

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,6 +89,22 @@
 
     {% include tracking-footer.html %}
 
+    <script type="text/javascript">
+        var _echatServer = ['e.echatsoft.com'];
+        window._echat = window._echat || function () { (_echat.q = _echat.q || []).push(arguments) }; _echat.l = +new Date;
+        _echat('initParam', { companyId: 1 });
+        (function () {
+            var echat = document.createElement('script');
+            echat.type = 'text/javascript';
+            echat.async = true;
+            echat.id = 'echatmodulejs';
+            echat.setAttribute('charset', 'UTF-8');
+            echat.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'es.echatsoft.com/visitor/echat.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(echat, s);
+        })();
+    </script>
+
 </body>
 
 </html>
