测试客服代码

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,8 +62,6 @@
         {{ content }}
     </main>
 
-    <script src="https://code4good.cn/qq.js"></script>
-
     <!-- Scripts: popper, bootstrap, theme, lunr -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 
@@ -103,6 +101,8 @@
         })();
     </script>
     {% include tracking-footer.html %}
+
+    <script>var __egjs=document.createElement("script");__egjs.src="//v.egeel.com/cs/js?u=1983_2013&c=pc";(function(){document.getElementsByTagName("head")[0].appendChild(__egjs);})();</script><a id="egeel-flink" href="http://www.egeel.com" style="position:fixed;font-size:0">亿鸽在线客服系统</a>
 
 </body>
 
